--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
     "url": "https://github.com/shakyShane/bs-snippet-injector/issues"
   },
   "homepage": "https://github.com/shakyShane/bs-snippet-injector",
-  "dependencies": {
-    "tfunk": "0.0.2"
-  },
   "devDependencies": {
-    "browser-sync": "^1.3.3"
+    "browser-sync": "2.4.0"
   }
 }
