--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bs-snippet-injector",
-  "version": "0.0.7",
+  "version": "2.0.0",
   "description": "Write & Remove the BrowserSync Snippet to a file",
   "main": "index.js",
   "scripts": {
@@ -20,10 +20,7 @@
     "url": "https://github.com/shakyShane/bs-snippet-injector/issues"
   },
   "homepage": "https://github.com/shakyShane/bs-snippet-injector",
-  "dependencies": {
-    "tfunk": "0.0.2"
-  },
   "devDependencies": {
-    "browser-sync": "^1.3.3"
+    "browser-sync": "2.4.0"
   }
 }
